<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nawigation_menu"
    app:startDestination="@id/menuFragment">

    <fragment
        android:id="@+id/menuFragment"
        android:name="com.codinginflow.navigationcomponenttutorial.MenuFragment"
        android:label="@string/Menu"
        tools:layout="@layout/fragment_menu" >
        <action
            android:id="@+id/action_menuFragment_to_dodajOgloszenieFragment"
            app:destination="@id/dodajOgloszenieFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapaFragment"
        android:name="com.codinginflow.navigationcomponenttutorial.MapaFragment"
        android:label="@string/Mapa"
        tools:layout="@layout/fragment_mapa" />
    <fragment
        android:id="@+id/mojeKontoFragment"
        android:name="com.codinginflow.navigationcomponenttutorial.MojeKontoFragment"
        android:label="@string/mojeKonto"
        tools:layout="@layout/fragment_moje_konto" />
    <fragment
        android:id="@+id/dodajOgloszenieFragment"
        android:name="com.codinginflow.navigationcomponenttutorial.AddAdvertisment"
        android:label="@string/dodaj_ogłosznie"
        tools:layout="@layout/fragment_dodaj_ogloszenie" >
        <action
            android:id="@+id/action_dodajOgloszenieFragment_to_menuFragment"
            app:destination="@id/menuFragment"
            app:popUpTo="@id/menuFragment" />
    </fragment>
</navigation>