<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAdvertisment" >

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="608dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button_dodaj_ogloszenie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/addTytulOgloszenia"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/podaj_tytu_og_szenia"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/addCenaOgloszenia"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/cena_wynajmu"
            android:inputType="numberDecimal"
            android:padding="10dp" />

        <EditText
            android:id="@+id/addOpisOgloszenia"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/opsi_og_szenia"
            android:inputType="textMultiLine"
            android:padding="10dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginBottom="148dp"
            android:text="@string/dodaj_zdjecie_ogloszenie" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBoxDodanieogloszenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zatwerdzenie_ogloszenia"
        app:layout_constraintBottom_toTopOf="@+id/button_dodaj_ogloszenie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_dodaj_ogloszenie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dodaj_ogloszenie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>