<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.codinginflow.navigationcomponenttutorial.HomeFragment"
        android:label="HOME"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_rejestracjaFragment2"
            app:destination="@id/rejestracjaFragment2" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.codinginflow.navigationcomponenttutorial.LoginFragment"
        android:label="@string/Logowanie"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_rejestracjaFragment2"
            app:destination="@id/rejestracjaFragment2" />
    </fragment>
    <fragment
        android:id="@+id/rejestracjaPoprawnaFragment"
        android:name="com.codinginflow.navigationcomponenttutorial.RegisterCorrectFragment"
        android:label="@string/POTWIERDZENIE"
        tools:layout="@layout/fragment_rejestracja_poprawna">
        <argument
            android:name="Username"
            app:argType="string" />
        <action
            android:id="@+id/action_rejestracjaPoprawnaFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/rejestracjaNiePoprawnaFragment"
        android:name="com.codinginflow.navigationcomponenttutorial.RejestracjaNiePoprawnaFragment"
        android:label="fragment_rejestracja_nie_poprawna"
        tools:layout="@layout/fragment_rejestracja_nie_poprawna" >
        <action
            android:id="@+id/action_rejestracjaNiePoprawnaFragment_to_homeFragment2"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/rejestracjaFragment2"
        android:name="com.codinginflow.navigationcomponenttutorial.RegisterFragment"
        android:label="@string/Rejestracja"
        tools:layout="@layout/fragment_rejestracja">
        <action
            android:id="@+id/action_rejestracjaFragment2_to_rejestracjaPoprawnaFragment2"
            app:destination="@id/rejestracjaPoprawnaFragment" />
        <action
            android:id="@+id/action_rejestracjaFragment2_to_rejestracjaNiePoprawnaFragment"
            app:destination="@id/rejestracjaNiePoprawnaFragment" />
        <action
            android:id="@+id/action_rejestracjaFragment2_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
</navigation>